# SCMCP

./: .dockerignore  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Makefile  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker-publish.yml
src/: index.test.ts  index.ts
src/scmcp/: __init__.py  cstone_client.py  server.py  uex_client.py
tests/: test_server.py
