[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scmcp"
version = "0.1.0"
description = "Star Citizen MCP Server - Query in-game resources via UEX Corp and Cornerstone Finder APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
scmcp = "scmcp.server:main"

[project.urls]
Homepage = "https://github.com/NyleGarcia/SCMCP"
"UEX Corp API" = "https://uexcorp.space/api/documentation/"
"Cornerstone Finder" = "https://finder.cstone.space/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
